gcc/testsuite/rust/compile/issue-3614.rs
#![feature(no_core)]
#![no_core]

#[repr] // { dg-error "malformed .repr. attribute" }

struct _B {}
